[tool.poetry]
name = "chanloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
tqdm = "^4.45.0"
click = "^7.1.1"
PythonVideoConverter = "^1.0.3"
six = "^1.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
chanloader = 'chanloader.__main__'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
